<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/pref_service_title"
        android:summary="@string/pref_service_description"
        android:key="service"
        android:defaultValue="Elementum"
        android:entries="@array/services"
        android:entryValues="@array/services" />
    <ListPreference
        android:title="@string/pref_service_acestream"
        android:summary="@string/pref_acestream_description"
        android:key="methodace"
        android:defaultValue="AceStream"
        android:entries="@array/methodace"
        android:entryValues="@array/methodace" />
    <ListPreference
        android:title="@string/pref_service_sopcast"
        android:summary="@string/pref_sopcast_description"
        android:key="methodsopcast"
        android:defaultValue="Plexus"
        android:entries="@array/methodsop"
        android:entryValues="@array/methodsop" />
    <EditTextPreference
        android:title="@string/pref_wait_timeout"
        android:defaultValue="10"
        android:key="timeout"
        android:dialogTitle="@string/pref_timeout_title"
        android:inputType="number"
        android:summary="@string/pref_timeout_description"/>
    <ListPreference
        android:title="@string/pref_select_app"
        android:key="application"
        android:summary="@string/pref_select_app_description"/>
    <EditTextPreference
        android:title="@string/pref_host"
        android:enabled="false"
        android:defaultValue="127.0.0.1"
        android:key="host"
        android:summary="@string/pref_host_description"/>
    <Preference
        android:title="@string/pref_check_updates"
        android:key="update"
        android:enabled="false"/>
</PreferenceScreen>